[package]
name = "sanusb"
version = "0.1.0"
authors = ["StefanJo3107 <sjovanovic0831@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.48", default-features = false }
esp-idf-sys = { version = "0.34.1", features = ["binstart"] }
esp-idf-hal = "0.43.1"
embedded-svc = { version = "0.27.1", features = [] }
embedded-hal = "1.0.0"
anyhow = "1.0.83"
sanscript_common = {path= "../san-common" }
san_vm = {path = "../san-vm"}

[build-dependencies]
embuild = "0.31.3"

[[package.metadata.esp-idf-sys.extra_components]]
remote_component = { name = "espressif/tinyusb", version = "^0.15.0~8" }
bindings_header = "tusb_bindings.h"
bindings_module = "tinyusb"
[[package.metadata.esp-idf-sys.extra_components]]
remote_component = { name = "espressif/esp_tinyusb", version = "^1.4.4" }
bindings_header = "tusb_bindings.h"
bindings_module = "esptinyusb"